[package]
name = "obs-presign"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
urlencoding = "2"
chrono = "0.4"